--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/PROJECT/Scenes/SceneDev_Arthur.SceneDev_Arthur
-EditorStartupMap=/Game/PROJECT/Scenes/SceneDev_Arthur.SceneDev_Arthur
+EditorStartupMap=/Game/PROJECT/Scenes/HomeMenu.HomeMenu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
